--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,14 +2,11 @@
 
 = Introduction =
 
- MVM implements simple language (MVM language) with basic
-computational functionality and flow control.
+ MVM implements simple language (MVM language) with basic computational functionality and flow control.
 
 = Details =
 
-   Folder 'include' contains generic declarations of language constructs
-(as AST nodes), set of bytecodes with description, and certain basic
-interfaces.
+   Folder 'include' contains generic declarations of language constructs (as AST nodes), set of bytecodes with description, and certain basic interfaces.
   
   Folder 'tests' contains MVM tests. Feel free to implement your own tests.
 
@@ -18,5 +15,9 @@ interfaces.
 
 = Build =
 
- Build shall be pretty straightforward, just type 'make' in command
- line (known to work with MacOS and Linux).
+ Build shall be pretty straightforward, just type 'make' in command 
+line (known to work with MacOS and Linux).
+
+= Commits=
+
+ Commit your work under 'students/2011/Your.Name'. 
