--- a/trunk/students/2012/lazarev/Bytecode/README
+++ b/trunk/students/2012/lazarev/Bytecode/README
@@ -1,6 +1,1 @@
-Interperter works on:
-recursive fib(30)
-ackermann(3, 8)
-complex2 - foo(27)
-
-fails on larger tests
+works very slow on large recursive tests
