Edited wiki page MVMLanguage through web user interface.

--- a/wiki/MVMLanguage.wiki
+++ b/wiki/MVMLanguage.wiki
@@ -5,6 +5,15 @@
 For purposes of this class we use simple curly-brace language, called MVM language.
 It's semantics is natural C-like semantics with same operator precedence and such.
 
+For example
+{{{
+int i;
+i = 1;
+print('Hello, i=', i);
+}}}
+will print
+{{{
+ Hello, i=1
+}}}
 
-
-= Details =
+For other constructs, you may consult samples in tests/*.mvm.
